--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="Kittensafe v0.1"
+      name="KittenSafe"
       content="Crypo-based file decryption and delayed encryption"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
@@ -25,7 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
-    <title>Kittensafe v0.1</title>
+    <title>KittenSafe</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
