--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
     <title>KittenSafe</title>
   </head>
-  <body style="overscroll-behavior-y: none;">
+  <body style="overscroll-behavior-y: none; overflow: hidden;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
