--- a/public/index.html
+++ b/public/index.html
@@ -2,16 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8"/>
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <meta name="theme-color" content="#000000"/>
+    <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width"/>
     <meta name="description" content="Crypo-based file decryption and delayed encryption"/>
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png"/>
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
     <title>KittenSafe</title>
   </head>
   <body style="overscroll-behavior-y: none; overflow: hidden;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root" style="top: 0; bottom: 0; left: 0; right: 0; position: absolute;"></div>
   </body>
 </html>
