--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Crypo-based file decryption and delayed encryption"/>
     <title>KittenSafe</title>
   </head>
-  <body style="overscroll-behavior-y: none; overflow: hidden;">
+  <body style="overscroll-behavior-y: none; position: fixed; top: 0; right: 0; left: 0; bottom: 0;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root" style="top: 0; bottom: 0; left: 0; right: 0; position: absolute;"></div>
   </body>
