make some elements non-selectable (WebApp)

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,6 @@
   </head>
   <body style="overscroll-behavior-y: none; position: fixed; top: 0; right: 0; left: 0; bottom: 0;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root" style="top: 0; bottom: 0; left: 0; right: 0; position: absolute;"></div>
+    <div id="root" style="top: 0; bottom: 0; left: 0; right: 0; position: absolute; user-select: none; -webkit-user-select: none; -moz-user-select: none;"></div>
   </body>
 </html>
