--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width"/>
-    <meta name="description" content="Crypo-based file decryption and delayed encryption"/>
+    <meta name="description" content="secure WebApp for encrypting your files for delayed access until a preselected timestamp"/>
+    <meta property="og:title" content="KittenSafe"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:url" content="https://kittensafe.netlify.com/"/>
+    <meta property="og:image" content="https://kittensafe.netlify.com/static/media/logo256.bcc357ce.png"/>
+    <meta property="og:description" content="KittenSafe is a secure WebCrypto-based WebApp for encrypting your files for delayed access until a preselected timestamp."/>
     <title>KittenSafe</title>
   </head>
   <body style="overscroll-behavior-y: none; position: fixed; top: 0; right: 0; left: 0; bottom: 0;">
