upgrade React to v16.13

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="https://kittensafe.netlify.com/"/>
     <meta property="og:image" content="https://kittensafe.netlify.com/static/media/logo256.bcc357ce.png"/>
-    <meta property="og:description" content="KittenSafe is a secure WebCrypto-based WebApp for encrypting your files for delayed access until a preselected timestamp."/>
+    <meta property="og:description" content="KittenSafe is a secure WebCrypto-based WebApp that lets you encrypt your files for delayed access until a preselected timestamp."/>
     <title>KittenSafe</title>
   </head>
   <body style="overscroll-behavior-y: none; position: fixed; top: 0; right: 0; left: 0; bottom: 0;">
